Major change: multiple son calls
to do: split rendering from index.js on multiple divs instead of
overwriting div with id campaign

--- a/src/campaigns/IT/dreft_5678EFGH/css/IT.css
+++ b/src/campaigns/IT/dreft_5678EFGH/css/IT.css
@@ -1,11 +1,11 @@
 body{
-	background:#fff;
+	background:black;
 }
 #header,p{
-	color:blue;
+	color:red;
 }
 .ui.segment{
   background-color:red;
-  color:#fff;
+  color:yellow;
 
 } 
